--- a/assignment_2/_config.yml
+++ b/assignment_2/_config.yml
@@ -2,7 +2,7 @@ title:              Welcome to my blog!
 email:              dqhungdl@gmail.com
 description:        Personal blog
 author:             Duong Quoc Hung
-baseurl:            "/myblog"
+baseurl:            "/INT3306-Web/assignment_2"
 url:                "https://dqhungdl.github.io"
 
 # Social Profiles
